--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans";
 }
 
 body {
@@ -16,8 +17,9 @@ h1 {
   background: #451F55;
   color: #fff;
   padding: 20px;
-  font-family: sans-serif;
-  font-weight: normal;
+  font-family: "Alumni Sans Inline One";
+  font-weight: 400;
+  font-size: 48px;
 }
 
 .team-wrapper {
