--- a/styles/style.css
+++ b/styles/style.css
@@ -52,15 +52,19 @@ h1 {
 
 .matches-played {
   width: 50px;
+  padding: 15px;
   text-align: center;
+  background-color: white;
+  transition: all .8s;
+  -webkit-transition: all .8s;
+  -moz-transition: all .8s;
+  -o-transition: all .8s;
 }
 
 .champions-league {
   background-color: rgb(106, 106, 255);
-  padding: 15px;
 }
 
 .europa-league {
-  padding: 15px;
   background-color: rgb(248, 200, 143);
 }
